# comprexia

./: .eslintrc.js  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  full-ci.yml
benchmarks/datasets/: sample.json
benchmarks/runner/: advanced.js  depth.js  index.js
examples/: database-storage.js  file-compressor.js  real-time-streaming.js
examples/express/: advanced-server.js  large-sample-data.json  server.js
examples/fastify/: server.js
examples/full-stack/backend/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
examples/full-stack/backend/src/: index.ts
examples/full-stack/backend/src/middleware/: comprexia.ts
examples/full-stack/backend/src/routes/: jsonplaceholder.ts
examples/full-stack/frontend/: index.html  package-lock.json  package.json
examples/full-stack/frontend/src/: App.css  App.tsx
include/comprexia/: decoder.h  encoder.h  stream.h
node/: index.ts
node/web/: decoder.ts
src/cx_bindings/: addon.cc
src/cx_core/: decoder.cpp  encoder.cpp  preprocessor.cpp  preprocessor.h  simd_utils.cpp  simd_utils.h  stream.cpp
test/node/: roundtrip.test.js  stream.test.js
web/js/: decoder.ts
